<resources>
    <string name="app_name">اسکرامیون</string>
    <string name="body">
        برای تغییر رمز عبور، روی لینک زیر کلیک کنید\n
         https://scrumproject.ir/%s
    </string>
    <string name="check_your_email">لطفاً آدرس ایمیل خود را چک کنید!</string>
    <string name="enter_valid_email">لطفاً ایمیل معتبر وارد کنید!</string>
    <string name="change_pass">تغییر رمز عبور</string>
    <string name="pass_change_success">رمز عبور با موفقیت تغییر کرد</string>
    <string name="register_first">لطفاً ابتدا ثبت نام کنید!</string>
    <string name="send">ارسال</string>
    <string name="email_address">آدرس ایمیل</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="password">رمز عبور</string>
    <string name="email">ايميل</string>
    <string name="email_username">ايميل / نام کاربری</string>
    <string name="forgot_your_pass">رمز عبور خود را فرموش کرده اید؟</string>
    <string name="sign_in">ورود</string>
    <string name="wrong_info">ایمیل یا رمز عبور شما اشتباه می باشد!</string>
    <string name="do_u_have_acc">اکانت دارید؟</string>
    <string name="repeat_password">تکرار رمز عبور</string>

    <string name="create_acc_btn">اکانت ندارید؟ بسازید!</string>
    <string name="edit_group_settings">تنظیمات گروه</string>
    <string name="save">ذخیره</string>
    <string name="group_name">نام گروه</string>
    <string name="group_members">اعضاء گروه</string>
    <string name="invite_via_link">دعوت با لینک</string>
    <string name="delete_group">حذف گروه</string>
    <string name="invite_link">لینک دعوت</string>
    <string name="copy_link">کپی لینک</string>
    <string name="share_link">انتشار لینک</string>
    <string name="invite_link_desc">با استفاده از این لینک میتونید دوستانتون رو به گروه دعوت کنید</string>
    <string name="more">بیشتر</string>
    <string name="group_bio">بیوگرافی</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">تنظیمات</string>
    <string name="starting_gp_sentence">فقط خودت اینجایی !</string>
    <string name="add_member">اضافه کردن عضو</string>
    <string name="add_group">اضافه کردن گروه</string>
    <string name="settle_up">تسویه/عدم تسویه</string>
    <string name="action_exit">Exit</string>
    <string name="warning">هشدار</string>
    <string name="cancel">لغو</string>
    <string name="exit">خروج</string>
    <string name="exit_sentence">آیا واقعا می خواهید از برنامه خارج شوید؟</string>
    <string name="group_max">حداکثر تعداد اعضای گروه</string>
    <string name="group_count">تعداد</string>
    <string name="group_welcomeMsg">پیام خوش آمد گویی</string>
    <string name="group_msg">پیام</string>
    <string name="create">ایجاد گروه</string>
    <string name="create_group">ایجاد گروه</string>
    <string name="action_addMember">اضافه کردن عضو</string>
    <string name="action_invoice"> فاکتور</string>
    <string name="invoice_name">نام کالا</string>
    <string name="product_code">کد کالا</string>
    <string name="product_price">قیمت کالا</string>
    <string name="bill">قبض</string>
    <string name="food">غذا</string>
    <string name="cost_type">نوع خرج</string>
    <string name="requirement">مایحتاج</string>
    <string name="home">کرایه خانه</string>
    <string name="transport">رفت و آمد</string>
    <string name="other">سایر</string>
    <string name="member_share">سهم شخص</string>
    <string name="product_description">توضیحات</string>
    <string name="invoce_title">نام فاکتور</string>
    <string name="person">فرد</string>
    <string name="price">مبلغ پرداختی</string>
    <string name="share">سهم</string>
    <string name="payment">بدهی/طلب</string>
    <string name="updatedPayment">بدهی/طلب آپدیت شده</string>
    <string name="calculate">محاسبات</string>
    <string name="add">اضافه کن</string>
    <string name="add_sentence">ایمیل کاربر مد نظر را وارد کنید.</string>
    <string name="member_name">ایمیل عضو</string>
    <string name="member_role">نقش</string>

</resources>