<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activity.ViewInvoiceActivity">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="?actionBarSize"
        android:title="نام فاکتور"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="571dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@color/black"
            android:dividerPadding="@dimen/spacing_small"
            android:gravity="center_horizontal"
            android:showDividers="middle">

            <!-- table title
            color : blue
             and bold-->
            <TableRow
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:divider="@color/black"
                android:showDividers="middle">

                <TextView
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/person"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />

                <TextView
                    android:layout_margin="4dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />

                <TextView
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/share"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />

                <TextView
                    android:layout_margin="4dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/payment"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />

                <TextView
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/calculate"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />

                <TextView
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/updatedPayment"
                    android:textStyle="bold"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />
            </TableRow>

            <!-- table title
            color : black -->
            <TableRow
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:divider="@color/black"
                android:showDividers="middle">

                <TextView
                    android:gravity="center"
                    android:text="@string/person"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/payment"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/calculate"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/updatedPayment"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

        </TableLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
